--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,9 +1,1 @@
-<ion-menu [content]="mainNav">
-  <ion-content>
-    <ion-list>
-      <ion-item menuClose>Hello</ion-item>
-    </ion-list>
-    <div>There</div>
-  </ion-content>
-</ion-menu>
-<ion-nav [root]="rootPage" #mainNav></ion-nav>
+<ion-nav [root]="rootPage"></ion-nav>
